<resources>
    <string name="app_name">NewsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="news_app">News App</string>
    <string name="geo_news">GEO News</string>
    <string name="bbc_news">BBC News</string>
    <string name="ary_news">ARY News</string>
    <string name="cnn_news">CNN News</string>
    <string name="dunya_news">Dunya News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>