<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dunya">


    <fragment
        android:id="@+id/nav_dunya"
        android:name="com.example.newsapp.Fragments.DunyaFragment"
        android:label="@string/dunya_news"
        tools:layout="@layout/fragment_dunya" />
    <fragment
        android:id="@+id/nav_geo"
        android:name="com.example.newsapp.Fragments.GeoFragment"
        android:label="@string/geo_news"
        tools:layout="@layout/fragment_geo" />

    <fragment
        android:id="@+id/nav_ary"
        android:name="com.example.newsapp.Fragments.AryFragment"
        android:label="@string/ary_news"
        tools:layout="@layout/fragment_ary" />

    <fragment
        android:id="@+id/nav_bbc"
        android:name="com.example.newsapp.Fragments.BBCFragment"
        android:label="BBC News"
        tools:layout="@layout/fragment_b_b_c" />
    <fragment
        android:id="@+id/nav_cnn"
        android:name="com.example.newsapp.Fragments.CNNFragment"
        android:label="CNN News"
        tools:layout="@layout/fragment_c_n_n" />
</navigation>